--- a/css/prescription.css
+++ b/css/prescription.css
@@ -158,6 +158,29 @@
     background-color: white;
     position: relative;
 }
+
+/* 세로선 추가 */
+.prescription-center-bottom::before {
+    content: '';
+    position: absolute;
+    top: 40px;  /* 가로선과 동일한 시작점 */
+    left: 50%;  /* 컨테이너의 중앙 */
+    width: 1px;
+    height: calc(100% - 40px);  /* 컨테이너 높이에서 상단 여백(40px)과 하단 마진(5px)을 뺌 */
+    background-color: #ccc;
+}
+
+/* Diagnosis & Prescription 섹션의 가로선 */
+.prescription-center-bottom::after {
+    content: '';
+    position: absolute;
+    top: 40px;  /* 타이틀(10px) + 타이틀 높이(15px) + 여백(10px) */
+    left: 0;
+    width: 100%;
+    height: 1px;
+    background-color: #ccc;
+}
+
 .prescription-right-container {
     width: 100%;  /* content-body-prescription2의 전체 너비 사용 */
     height: 100%;
@@ -257,7 +280,7 @@
 .prescription-section-title {
     position: absolute;
     left: 10px;
-    top: 15px;
+    top: 10px;
     font-size: 12px;
     font-weight: bold;
     color: rgb(110, 110, 124);
@@ -380,6 +403,28 @@
 .print-btn:hover {
     background: url('../image/printer_hover.png') no-repeat center;
     background-size: 35px;
+}
+
+.cc-search-container {
+    position: absolute;
+    top: 50px;
+    left: 10px;
+    width: calc(50% - 20px);
+}
+
+.cc-search-input {
+    width: 100%;
+    height: 33px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    padding: 8px;  /* 왼쪽 패딩 원래대로 복구 */
+    font-size: 12px;
+    box-sizing: border-box;
+}
+
+.cc-search-input::placeholder {
+    color: #999;
+    font-size: 12px;
 }
 
 
